tests/machine/x/pascal/left_join.error
fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/left_join.pas
left_join.pas(29,16) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" to "TArray$1$crcE0B4E8C7"
left_join.pas(38,13) Error: Illegal type conversion: "{Array Of Const/Constant Open} Array of TFPGMap$2$crcDFB44C97" to "TArray$1$crc7ED07D64"
left_join.pas(40,35) Error: identifier idents no member "id"
left_join.pas(41,34) Error: Identifier not found "c"
left_join.pas(42,33) Error: identifier idents no member "total"
left_join.pas(46,11) Error: Identifier not found "c"
left_join.pas(48,22) Error: identifier idents no member "customerId"
left_join.pas(48,35) Error: Identifier not found "c"
left_join.pas(49,41) Error: Incompatible types: got "{Array Of Const/Constant Open} Array of TFPGMap$2$crcA49C6E68" expected "TArray$1$crcE0B4E8C7"
left_join.pas(49,35) Error: Incompatible types: got "TFPGMap<System.Variant,System.Variant>" expected "TFPGMap<System.ShortString,System.Variant>"
left_join.pas(56,35) Error: identifier idents no member "orderId"
left_join.pas(56,72) Error: identifier idents no member "customer"
left_join.pas(57,21) Error: identifier idents no member "total"
left_join.pas(60) Fatal: There were 13 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
